// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`web component: Slider should have right properties 1`] = `
LoadedCheerio {
  "0": <div
    class="slider class-name  "
    style="color: red;"
  >
    <div
      class="wrapper"
    >
      <div
        class="tapArea"
      >
        <div
          class="handleWrapper"
          style="background-color: grey;"
        >
          <div
            class="sliderHandle"
            style="left: 11.11111111111111%;"
          />
          <div
            class="sliderThumb"
            style="width: 12px; height: 12px; margin-left: -6px; margin-top: -6px; left: 11.11111111111111%;"
          />
          <div
            class="sliderTrack"
            style="width: 11.11111111111111%; background-color: yellow;"
          />
          <div
            class="sliderStep"
          />
        </div>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`web component: Slider should render correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="slider   "
  >
    <div
      class="wrapper"
    >
      <div
        class="tapArea"
      >
        <div
          class="handleWrapper"
          style="background-color: rgb(233, 233, 233);"
        >
          <div
            class="sliderHandle"
            style="left: 0%;"
          />
          <div
            class="sliderThumb"
            style="width: 28px; height: 28px; margin-left: -14px; margin-top: -14px; left: 0%; background-color: rgb(255, 255, 255);"
          />
          <div
            class="sliderTrack"
            style="width: 0%; background-color: rgb(26, 173, 25);"
          />
          <div
            class="sliderStep"
          />
        </div>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;
